Fixed up the feature tabs margin on mobile.

--- a/sass/base/_font-rules.scss
+++ b/sass/base/_font-rules.scss
@@ -13,7 +13,7 @@ h1{
 h2{
     font-weight: 700;
     font-size: 26px;
-    margin: 1rem auto;
+    margin: 0 auto 1rem auto;
     text-align: center;
 }
 
