--- a/sass/style.css
+++ b/sass/style.css
@@ -12,7 +12,7 @@ h1 {
 h2 {
   font-weight: 700;
   font-size: 26px;
-  margin: 1rem auto;
+  margin: 0 auto 1rem auto;
   text-align: center;
 }
 
@@ -188,7 +188,8 @@ ul a {
 
 .button-wrapper {
   display: block;
-  width: 100vw;
+  width: calc(100% - 4rem);
+  margin: 0 2rem;
   border-top: 1px solid hsl(229deg, 8%, 60%);
   text-align: center;
 }
@@ -197,21 +198,24 @@ ul a {
 }
 .button-wrapper p {
   font-family: "Rubik", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   background-color: transparent;
   border: none;
-  padding: 1rem 1rem 1rem calc(1rem - 3px);
+  padding: 1rem 0;
   border-bottom: 3px solid transparent;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
-.button-wrapper p:hover, .button-wrapper p:active {
+.button-wrapper:hover p, .button-wrapper:active p {
+  color: black;
   border-bottom-color: hsl(0deg, 94%, 66%);
 }
 @media (min-width: 769px) {
-  .button-wrapper:last-of-type {
-    border-bottom: none;
+  .button-wrapper {
+    border-bottom: 1px solid hsl(229deg, 8%, 60%);
+    border-top: none;
+    margin: 0;
   }
 }
 
@@ -286,6 +290,7 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  margin-bottom: 2rem;
 }
 #download-link-wrapper a {
   margin-top: 1rem;
@@ -315,4 +320,12 @@ body {
 
 #button-content {
   margin-top: 2rem;
+  cursor: pointer;
+}
+@media (min-width: 769px) {
+  #button-content {
+    display: flex;
+    width: 60%;
+    margin: 2rem auto 0 auto;
+  }
 }/*# sourceMappingURL=style.css.map */
